完善了框架代码
